kubernetes/k3s-01/workloads/longhorn/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.k3s-01.47fc5c.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          kind: Service
          port: 80
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: longhorn-certificate
